--- a/views/index.hbs
+++ b/views/index.hbs
@@ -75,7 +75,7 @@ https://www.tooplate.com/view/2120-ben-resume
             <div class="row">
 
                 <div class="mx-auto col-lg-5 col-md-5 col-10">
-                    <img src="images/sana1.jpg" class="img-fluid" alt="Sana Resume HTML Template">
+                    <img src="images/sana2.png" class="img-fluid" alt="Sana Resume HTML Template">
                 </div>
 
                 <div class="d-flex flex-column justify-content-center align-items-center col-lg-7 col-md-7 col-12">
@@ -83,8 +83,8 @@ https://www.tooplate.com/view/2120-ben-resume
 
                         <h1 class="hero-title">👋 This is Sana Shaikh</h1>
 
-                        <a href="#" class="email-link">
-                            sample@gmail.com
+                        <a href="mailto:hkiahs66@gmail.com" class="email-link">
+                            hkiahs66@gmail.com
                         </a>
 
                     </div>
@@ -118,17 +118,20 @@ https://www.tooplate.com/view/2120-ben-resume
 
                         <li><strong>Known Languages:</strong> Hindi , English , Marathi</li>
 
-                        <li><strong>Email :</strong> sample@gmail.com</li>
+                        <li><strong>Email :</strong> hkiahs66@gmail.com</li>
                     </ul>
                 </div>
 
                 <div class="col-lg-5 mx-auto col-md-6 col-12">
-                    <img src="images/true-agency.jpg" class="about-image img-fluid" alt="sana Resume HTML Template">
+                    <img src="images/sana3.jpg" class="about-image img-fluid" alt="sana Resume HTML Template">
                 </div>
 
             </div>
+            <div class="container">
             <div class="row about-third">
-
+              <div class="col-12">
+                <h3 class="mb-5 text-center">Education Details</h3>
+                <div class="row">
                 <div class="col-lg-3 col-md-3 col-12">
                     <h3>MSC (COMP SCI)</h3>
                     <p>PUNE UNIVERSITY <br>
@@ -150,7 +153,10 @@ https://www.tooplate.com/view/2120-ben-resume
                     <h3>SSC</h3>
                     <p>SANCHETI SECONDARY SCHOOL, PUNE
                         2014-2015    91%.</p>
+                   </div>
                 </div>
+             </div>
+            </div>
             </div>
         </div>
     </section>
@@ -334,11 +340,10 @@ they can manage student and their progress .</p>
                     </p>
                 <h3 class="my-4 pt-4 pt-lg-0">Contact Me</h3>
                     <ul class="social-links mt-2">
+                        <li><a href="https://www.linkedin.com/in/sana-shaikh-116418190" rel="noopener" class="fab fa-linkedin"></a></li>
                         <li><a href="#" rel="noopener" class="fab fa-facebook"></a></li>
                         <li><a href="#" rel="noopener" class="fab fa-twitter"></a></li>
                         <li><a href="#" rel="noopener" class="fab fa-instagram"></a></li>
-                        <li><a href="#" rel="noopener" class="fab fa-linkedin"></a></li>
-                        <li><a href="#" rel="noopener" class="fab fa-youtube"></a></li>
                     </ul>
 
                      </div>
